chore: polish d2-digram generate stability

--- a/agents/generate/generate-d2-diagram.yaml
+++ b/agents/generate/generate-d2-diagram.yaml
@@ -1,24 +1,23 @@
 name: drawD2Diagram
-description: Check if a D2 diagram is needed based on the content, if needed, generate D2 Diagram code from text description, otherwise return empty string
+description: Generate a D2 diagram from document content.
 instructions:
-  url: ../../prompts/detail/d2-diagram/index.md
+  - role: system
+    url: ../../prompts/detail/d2-diagram/rules-system.md
+  - role: user
+    url: ../../prompts/detail/d2-diagram/rules-user.md
 input_schema:
   type: object
   properties:
-    diagramContent:
+    documentContent:
       type: string
-      description: Text description diagram content to generate D2 diagram
+      description: Source code of current document (without the D2 diagram)
   required:
-    - diagramContent
+    - documentContent
 output_schema:
   type: object
   properties:
     d2DiagramSourceCode:
       type: string
       description: Source code to draw D2 diagram
-    isNeedD2Diagram:
-      type: boolean
-      description: Is a D2 diagram needed
   required:
     - d2DiagramSourceCode
-    - isNeedD2Diagram
