fix: update pages

--- a/.aigne/web-smith/pages/output/_sitemap.yaml
+++ b/.aigne/web-smith/pages/output/_sitemap.yaml
@@ -1,9 +1,10 @@
 sitemap:
   - title: Home
     path: /home
+    children:
+      - title: About Blocklet
+        path: /home/about
   - title: Getting Started
     path: /getting-started
   - title: How It Works
     path: /how-it-works
-  - title: Enterprise
-    path: /enterprise
