--- a/.aigne/web-smith/pages/output/home.yaml
+++ b/.aigne/web-smith/pages/output/home.yaml
@@ -1,7 +1,7 @@
 id: 616571b7c79a8472
-createdAt: 2025-10-02T08:02:51.619Z
-updatedAt: 2025-10-02T08:02:51.619Z
-publishedAt: 2025-10-02T08:02:51.619Z
+createdAt: 2025-10-02T10:46:10.135Z
+updatedAt: 2025-10-02T10:46:10.135Z
+publishedAt: 2025-10-02T10:46:10.135Z
 isPublic: true
 locales:
   en:
@@ -22,8 +22,8 @@ locales:
       maxWidth: custom:1440px
       paddingY: normal
       paddingX: normal
-    title: AIGNE DocSmith | 能理解您代码的 AI 文档工具
-    description: 了解 AIGNE DocSmith，这款革命性的 AI 工具能直接从您的代码库自动生成全面、多语言的文档。零配置，始终保持最新。
+    title: AIGNE DocSmith | 能够理解你代码的 AI 驱动文档
+    description: 了解 AIGNE DocSmith，这是一款革命性的 AI 工具，能够 直接从你的代码库自动生成全面的多语言文档。零配置，始终保持最新。
     header:
       sticky: true
 sections:
@@ -1222,7 +1222,7 @@ dataSource:
           value: flex-start
         gs1rn5jmxfvpxptx:
           value:
-            text: 真正理解您代码的 AI 文档工具
+            text: 真正理解你代码的 AI 驱动文档
             style:
               variant: h1
         9ajrz12ik7esfk1z:
@@ -1230,7 +1230,7 @@ dataSource:
             list:
               - id: item-1759364500601-4gbj76l4x
                 type: text
-                text: 告别手动编写文档。AIGNE DocSmith 会分析您的代码库，生成全面、多语言且始终同步的文档。这就是文档的魔法。
+                text: 无需再手动编写文档。AIGNE DocSmith 会分析 你的代码库，生成全面的多语言文档，并始终保持同步。为文档提供强大的自动化支持。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1256,7 +1256,7 @@ dataSource:
       properties:
         a7frn5jmx5vpxpt3:
           value: |-
-            # 一条命令生成您的第一份文档
+            # One command to generate your first docs
             aigne doc generate
         qvxiyadgn5bj6oq8:
           value: false
@@ -1288,7 +1288,7 @@ dataSource:
           value: center
         gs1rn5jmxfvpxptx:
           value:
-            text: 为什么您会立刻爱上 DocSmith
+            text: 为什么 DocSmith 值得立即采用
             style:
               variant: h2
   8a0319c7be20285c:
@@ -1330,7 +1330,7 @@ dataSource:
             list:
               - id: item-1759143324880-zr95ywd04
                 type: text
-                text: 我们的 AI 不仅仅是阅读您的代码——它能理解其结构、模式和意图，从而创建出真正富有洞察力的文档。
+                text: 我们的 AI 不仅能读取你的代码，还能理解代码的 结构、模式与意图，从而生成真正有洞见的 文档。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1339,7 +1339,7 @@ dataSource:
     en:
       properties:
         5ek4m0kw9cu0ndns:
-          value: mdi:brain-outline
+          value: mdi:head-cog-outline
         gugqsxx3xyveuu8n:
           value: primary.main
         529qbwiam7oypw8e:
@@ -1347,7 +1347,7 @@ dataSource:
     zh:
       properties:
         5ek4m0kw9cu0ndns:
-          value: mdi:brain-outline
+          value: mdi:head-cog-outline
         gugqsxx3xyveuu8n:
           value: primary.main
         529qbwiam7oypw8e:
@@ -1391,7 +1391,7 @@ dataSource:
             list:
               - id: item-1759143324880-zr95ywd04
                 type: text
-                text: 从 API 参考到完整的用户指南，一次性获取您需要的所有文档。不再有遗漏或不完整的部分！
+                text: 从 API 参考到完整的用户指南，一次性获得你所需的 全部文档。不再有缺失或不完整的 章节。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1452,7 +1452,7 @@ dataSource:
             list:
               - id: item-1759143324880-zr95ywd04
                 type: text
-                text: 触达全球用户！获得 12 种语言的专业、上下文感知翻译，确保各地的技术准确性。
+                text: 面向全球受众。提供 12 种语言的专业、具备上下文感知的 翻译，确保各地的技术准确性。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1513,7 +1513,7 @@ dataSource:
             list:
               - id: item-1759143324880-zr95ywd04
                 type: text
-                text: 告别手动更新。DocSmith 自动检测代码变更并重新生成相关文档，使其永远不会过时。
+                text: 无需手动更新。DocSmith 会自动检测代码 变更并重新生成相关文档，始终保持 同步。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1574,7 +1574,7 @@ dataSource:
             list:
               - id: item-1759143324880-zr95ywd04
                 type: text
-                text: 数秒内即可开始。DocSmith 开箱即用，具备智能默认设置并能自动检测您项目的技术栈。
+                text: 几秒即可上手。DocSmith 开箱即用，提供智能默认设置， 并自动检测你项目的技术栈。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1635,7 +1635,7 @@ dataSource:
             list:
               - id: item-1759143324880-zr95ywd04
                 type: text
-                text: 连接您最喜欢的 LLM 或使用 AIGNE Hub。一键发布，立即与您的团队分享。
+                text: 连接你常用的 LLM，或使用 AIGNE Hub。一键发布， 立即与团队共享。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1690,15 +1690,15 @@ dataSource:
             list:
               - id: item-1759121327460-gc8w9kaxt
                 type: text
-                text: DocSmith 不仅仅是一个独立的工具，它已无缝集成到 AIGNE 平台中。这使其能够利用强大的共享 AI 功能和基础设施，让您无需自己的 API
-                  密钥即可访问 Gemini、GPT 和 Claude 等多个 LLM。
+                text: DocSmith 不只是独立工具；它与 AIGNE 平台无缝 集成。因此，它能够利用强大的共享 AI 能力和 基础设施，让你无需自备 API
+                  密钥即可使用 Gemini、GPT、Claude 等多种 LLM。
                 style:
                   color: ""
                   fontSize: 16px
                   variant: body1
         gs1rn5jmxfvpxptx:
           value:
-            text: AIGNE 生态系统的核心部分
+            text: AIGNE 生态的核心组成部分
             style:
               variant: h1
         v5utpm7bu9yvdpnq:
@@ -1736,7 +1736,7 @@ dataSource:
           value:
             - id: btn-default-1
               type: link
-              text: 了解工作原理
+              text: 查看工作原理
               url: link:///documentation/how-it-works
               variant: contained
               size: large
@@ -1776,7 +1776,7 @@ dataSource:
       properties:
         gs1rn5jmxfvpxptx:
           value:
-            text: Ready for Your Business?
+            text: Curious How the Magic Happens?
             style:
               variant: h2
         v5utpm7bu9yvdpnq:
@@ -1788,10 +1788,10 @@ dataSource:
             list:
               - id: item-1759204484222-0kvkmgmke
                 type: text
-                text: Scale your documentation with enterprise-grade features. Get team
-                  collaboration, custom branding, private cloud deployments, API
-                  integration, and priority support to fit your organization's
-                  needs.
+                text: Dive deep into the architecture of AIGNE DocSmith. Discover the
+                  multi-agent system that intelligently analyzes your code and
+                  see the entire generation pipeline in action. It's the tech
+                  behind the magic!
                 style:
                   color: ""
                   fontSize: 16px
@@ -1800,7 +1800,7 @@ dataSource:
       properties:
         gs1rn5jmxfvpxptx:
           value:
-            text: 为您的企业准备就绪？
+            text: 想知道这一切如何实现？
             style:
               variant: h2
         v5utpm7bu9yvdpnq:
@@ -1812,7 +1812,7 @@ dataSource:
             list:
               - id: item-1759204484222-0kvkmgmke
                 type: text
-                text: 通过企业级功能扩展您的文档。获得团队协作、自定义品牌、私有云部署、API 集成和优先支持，以满足您组织的需求。
+                text: 深入了解 AIGNE DocSmith 的架构。 探索智能分析你代码的多代理系统，并查看 完整的生成流水线如何运作。这就是其 背后的技术基础。
                 style:
                   color: ""
                   fontSize: 16px
@@ -1824,8 +1824,8 @@ dataSource:
           value:
             - id: btn-default-1
               type: link
-              text: Explore Enterprise Solutions
-              url: link:///enterprise
+              text: Explore How It Works
+              url: link:///how-it-works
               variant: text
               size: medium
               target: _self
@@ -1841,8 +1841,8 @@ dataSource:
           value:
             - id: btn-default-1
               type: link
-              text: 探索企业解决方案
-              url: link:///enterprise
+              text: 深入了解工作原理
+              url: link:///how-it-works
               variant: text
               size: medium
               target: _self
@@ -1857,16 +1857,16 @@ dataSource:
       properties:
         7m5pz8nefl5j9hqq:
           value:
-            url: https://placehold.co/1440x520?text=Enterprise+Security+%26+Collaboration
-            mediaKitUrl: https://placehold.co/1440x520?text=Enterprise+Security+%26+Collaboration
+            url: https://placehold.co/1440x520?text=DocSmith+Architecture
+            mediaKitUrl: https://placehold.co/1440x520?text=DocSmith+Architecture
             width: 3024
             height: 1034
     zh:
       properties:
         7m5pz8nefl5j9hqq:
           value:
-            url: https://placehold.co/1440x520?text=Enterprise+Security+%26+Collaboration
-            mediaKitUrl: https://placehold.co/1440x520?text=Enterprise+Security+%26+Collaboration
+            url: https://placehold.co/1440x520?text=DocSmith+Architecture
+            mediaKitUrl: https://placehold.co/1440x520?text=DocSmith+Architecture
             width: 3024
             height: 1034
   be2459a9b19a18c1:
@@ -1888,7 +1888,7 @@ dataSource:
       properties:
         gs1rn5jmxfvpxptx:
           value:
-            text: 有疑问？我们有答案！
+            text: 有问题？我们有答案。
             style:
               variant: h2
         v5utpm7bu9yvdpnq:
@@ -1941,19 +1941,18 @@ dataSource:
       properties:
         4221qi1bxy322mf4:
           value:
-            - title: 简单来说，什么是 AIGNE DocSmith？
-              answer: 它是一款智能、AI 驱动的工具，通过分析您的代码库自动生成高质量、结构化和多语言的文档。可以把它想象成一位专家级技术文档工程师，但速度快得多！
-            - title: 开始使用需要我自己的 API 密钥吗？
-              answer: 不需要！DocSmith 默认使用 AIGNE Hub，因此您无需任何 API
-                密钥即可立即开始生成文档。如果您愿意，也可以连接您自己的密钥，用于 OpenAI、Google 和 Anthropic
-                等提供商。
-            - title: 它如何保持文档最新？
-              answer: DocSmith 会智能检测您代码中的变更。当您运行更新命令时，它会识别新增或修改的内容，并自动仅重新生成受影响的部分，确保您的文档始终同步。
-            - title: 它支持哪种类型的项目？
-              answer: 它的设计非常通用！DocSmith 会自动检测您项目的结构和技术栈。它非常适用于 API、库、Web 应用等，并为不同受众提供可定制的样式。
-            - title: 发布我的文档有多容易？
-              answer: 非常简单！只需一条 'aigne doc publish' 命令即可让您的文档上线。您可以发布到公共的 DocSmith
-                平台，也可以发布到您团队的私有实例。
+            - title: AIGNE DocSmith 简而言之是什么？
+              answer: 这是一款智能的、由 AI 驱动的工具，通过分析你的代码库 自动生成高质量、结构化的多语言文档。把它看作 一位资深技术写作者，但速度要快得 多。
+            - title: 开始使用需要自备 API 密钥吗？
+              answer: 不需要。DocSmith 默认使用 AIGNE Hub，因此你无需任何 API 密钥即可立刻开始生成文档。若你愿意，也可以 连接你自己的
+                OpenAI、Google、Anthropic 等提供商的密钥。
+            - title: 它如何保持文档始终最新？
+              answer: DocSmith 会智能检测你代码中的更改。当你运行 更新命令时，它会识别新增或修改的内容，并 仅自动重新生成受影响的部分，确保文档始终同步。
+            - title: 它支持哪些类型的项目？
+              answer: 它被设计为通用型。DocSmith 会自动检测你项目的 结构和技术栈，适用于 API、库、Web 应用等，且 可为不同受众自定义风格。
+            - title: 发布文档有多容易？
+              answer: 非常简单。只需一条 'aigne doc publish' 命令就能让 文档上线。你可以发布到公共的 DocSmith 平台，或
+                发布到你团队的私有实例。
             - title: ""
               answer: ""
             - title: ""
@@ -1996,15 +1995,14 @@ dataSource:
             list:
               - id: item-1759121327460-gc8w9kaxt
                 type: text
-                text: 不要再把时间浪费在手动编写文档上了。让 AI 来完成繁重的工作，这样您就可以回去构建卓越的产品。立即试用 AIGNE
-                  DocSmith，亲眼见证它的魔力。
+                text: 别再把时间浪费在手工编写文档上。让 AI 处理繁重 工作，你可以专注于构建产品。立即试用 AIGNE DocSmith， 亲自体验其效果。
                 style:
                   color: ""
                   fontSize: 16px
                   variant: body1
         gs1rn5jmxfvpxptx:
           value:
-            text: 准备好革新您的文档了吗？
+            text: 准备好革新你的文档了吗？
             style:
               color: ""
               variant: h1
