--- a/.aigne/web-smith/pages/workspace/zh/home.yaml
+++ b/.aigne/web-smith/pages/workspace/zh/home.yaml
@@ -1,86 +1,129 @@
-meta:
-  title: "AIGNE DocSmith | 能理解您代码的 AI 文档工具"
-  description: "了解 AIGNE DocSmith，这款革命性的 AI 工具能直接从您的代码库自动生成全面、多语言的文档。零配置，始终保持最新。"
-sections:
-  - sectionName: "VerticalHeroWithCode"
-    sectionSummary: "一个引人入胜的英雄部分，旨在通过强有力的标题和单命令代码示例立即吸引开发者的注意力，促使他们开始使用。"
-    verticalHeroTitle: "真正理解您代码的 AI 文档工具"
-    verticalHeroDescription: "告别手动编写文档。AIGNE DocSmith 会分析您的代码库，生成全面、多语言且始终同步的文档。这就是文档的魔法。"
-    verticalHeroCode:
-      name: "bash"
-      content: "# 一条命令生成您的第一份文档\naigne doc generate"
-  - sectionName: "KeyBenefitsGrid"
-    sectionSummary: "本部分通过一个可快速浏览的 3 列网格，迅速传达 DocSmith 的核心价值主张，通过突出主要优势来建立用户的兴奋感和信任感。"
-    threeColumnGridTitle: "为什么您会立刻爱上 DocSmith"
-    list:
-      - sectionName: "BenefitCardIntelligentAnalysis"
-        sectionSummary: "突出 AI 深入理解代码的能力。"
-        iconName: "mdi:brain-outline"
-        cardTitle: "智能分析"
-        cardDescription: "我们的 AI 不仅仅是阅读您的代码——它能理解其结构、模式和意图，从而创建出真正富有洞察力的文档。"
-      - sectionName: "BenefitCardComprehensiveCoverage"
-        sectionSummary: "展示所生成文档的广度。"
-        iconName: "mdi:book-open-page-variant-outline"
-        cardTitle: "全面覆盖"
-        cardDescription: "从 API 参考到完整的用户指南，一次性获取您需要的所有文档。不再有遗漏或不完整的部分！"
-      - sectionName: "BenefitCardGlobalReady"
-        sectionSummary: "强调强大的多语言支持。"
-        iconName: "mdi:web"
-        cardTitle: "全球就绪"
-        cardDescription: "触达全球用户！获得 12 种语言的专业、上下文感知翻译，确保各地的技术准确性。"
-      - sectionName: "BenefitCardAlwaysCurrent"
-        sectionSummary: "专注于自动更新功能，这是一个关键的痛点解决方案。"
-        iconName: "mdi:update"
-        cardTitle: "始终最新"
-        cardDescription: "告别手动更新。DocSmith 自动检测代码变更并重新生成相关文档，使其永远不会过时。"
-      - sectionName: "BenefitCardZeroConfig"
-        sectionSummary: "吸引希望快速、轻松设置的用户。"
-        iconName: "mdi:rocket-launch-outline"
-        cardTitle: "零配置"
-        cardDescription: "数秒内即可开始。DocSmith 开箱即用，具备智能默认设置并能自动检测您项目的技术栈。"
-      - sectionName: "BenefitCardSeamlessIntegration"
-        sectionSummary: "突出与 LLM 和发布平台的轻松集成。"
-        iconName: "mdi:link-variant"
-        cardTitle: "无缝集成"
-        cardDescription: "连接您最喜欢的 LLM 或使用 AIGNE Hub。一键发布，立即与您的团队分享。"
-  - sectionName: "FeatureShowcase"
-    sectionSummary: "通过视觉上引人入胜的分割布局，将描述性文本与 AIGNE 生态系统的清晰视觉表示相结合，深入探讨特定功能。"
-    splitHeroTitle: "AIGNE 生态系统的核心部分"
-    splitHeroDescription: "DocSmith 不仅仅是一个独立的工具，它已无缝集成到 AIGNE 平台中。这使其能够利用强大的共享 AI 功能和基础设施，让您无需自己的 API 密钥即可访问 Gemini、GPT 和 Claude 等多个 LLM。"
-    splitHeroActions:
-      - text: "了解工作原理"
-        link: "link:///documentation/how-it-works"
-      - text: ""
-        link: ""
-    splitHeroRightImage: "https://docsmith.aigne.io/image-bin/uploads/def424c20bbdb3c77483894fe0e22819.png"
-  - sectionName: "EnterpriseSolutionsTeaser"
-    sectionSummary: "一个专门为吸引商业和企业客户而设的部分，通过总结高价值功能并将他们引向详细的企业页面。"
-    featureSectionTitle: "为您的企业准备就绪？"
-    featureSectionDescription: "通过企业级功能扩展您的文档。获得团队协作、自定义品牌、私有云部署、API 集成和优先支持，以满足您组织的需求。"
-    featureSectionAction:
-      text: "探索企业解决方案"
-      link: "link:///enterprise"
-    featureSectionBottomImage: "https://placehold.co/1440x520?text=Enterprise+Security+%26+Collaboration"
-  - sectionName: "FrequentlyAskedQuestions"
-    sectionSummary: "此 FAQ 部分主动解答常见用户问题，有助于消除潜在的疑虑，并减少新用户入门时的障碍。"
-    faqTitle: "有疑问？我们有答案！"
-    faqList:
-      - question: "简单来说，什么是 AIGNE DocSmith？"
-        answer: "它是一款智能、AI 驱动的工具，通过分析您的代码库自动生成高质量、结构化和多语言的文档。可以把它想象成一位专家级技术文档工程师，但速度快得多！"
-      - question: "开始使用需要我自己的 API 密钥吗？"
-        answer: "不需要！DocSmith 默认使用 AIGNE Hub，因此您无需任何 API 密钥即可立即开始生成文档。如果您愿意，也可以连接您自己的密钥，用于 OpenAI、Google 和 Anthropic 等提供商。"
-      - question: "它如何保持文档最新？"
-        answer: "DocSmith 会智能检测您代码中的变更。当您运行更新命令时，它会识别新增或修改的内容，并自动仅重新生成受影响的部分，确保您的文档始终同步。"
-      - question: "它支持哪种类型的项目？"
-        answer: "它的设计非常通用！DocSmith 会自动检测您项目的结构和技术栈。它非常适用于 API、库、Web 应用等，并为不同受众提供可定制的样式。"
-      - question: "发布我的文档有多容易？"
-        answer: "非常简单！只需一条 'aigne doc publish' 命令即可让您的文档上线。您可以发布到公共的 DocSmith 平台，也可以发布到您团队的私有实例。"
-  - sectionName: "FinalCallToAction"
-    sectionSummary: "页面底部一个高影响力的最终行动号召部分，旨在通过提供清晰、引人注目的后续步骤，将感兴趣的访客转化为活跃用户。"
-    ctaTitle: "准备好革新您的文档了吗？"
-    ctaDescription: "不要再把时间浪费在手动编写文档上了。让 AI 来完成繁重的工作，这样您就可以回去构建卓越的产品。立即试用 AIGNE DocSmith，亲眼见证它的魔力。"
-    cta:
-      - text: "免费开始使用"
-        link: "link:///getting-started"
-      - text: "在 GitHub 上查看"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+"meta":
+  "title": "AIGNE DocSmith | 能够理解你代码的 AI 驱动文档"
+  "description": "了解 AIGNE DocSmith，这是一款革命性的 AI 工具，能够
+    直接从你的代码库自动生成全面的多语言文档。零配置，始终保持最新。"
+"sections":
+  - "sectionName": "VerticalHeroWithCode"
+    "sectionSummary": "一个引人入胜的首屏区块，通过有力的标题和一条命令的代码
+      示例，立即吸引开发者注意并促使他们开始使用。"
+    "verticalHeroTitle": "真正理解你代码的 AI 驱动文档"
+    "verticalHeroDescription": "无需再手动编写文档。AIGNE DocSmith 会分析
+      你的代码库，生成全面的多语言文档，并始终保持同步。为文档提供强大的自动化支持。"
+    "verticalHeroCode":
+      "name": "bash"
+      "content": "# One command to generate your first docs
+
+        aigne doc generate"
+  - "sectionName": "KeyBenefitsGrid"
+    "sectionSummary": "该部分通过可快速浏览的三列网格，快速传达 DocSmith 的核心
+      价值主张，突出关键优势以建立信任和兴趣。"
+    "threeColumnGridTitle": "为什么 DocSmith 值得立即采用"
+    "list":
+      - "sectionName": "BenefitCardIntelligentAnalysis"
+        "sectionSummary": "突出 AI 对代码的深度理解能力。"
+        "iconName": "mdi:head-cog-outline"
+        "cardTitle": "智能分析"
+        "cardDescription": "我们的 AI 不仅能读取你的代码，还能理解代码的
+          结构、模式与意图，从而生成真正有洞见的
+          文档。"
+      - "sectionName": "BenefitCardComprehensiveCoverage"
+        "sectionSummary": "展示所生成文档的广度。"
+        "iconName": "mdi:book-open-page-variant-outline"
+        "cardTitle": "全面覆盖"
+        "cardDescription": "从 API 参考到完整的用户指南，一次性获得你所需的
+          全部文档。不再有缺失或不完整的
+          章节。"
+      - "sectionName": "BenefitCardGlobalReady"
+        "sectionSummary": "强调强大的多语言支持。"
+        "iconName": "mdi:web"
+        "cardTitle": "全球就绪"
+        "cardDescription": "面向全球受众。提供 12 种语言的专业、具备上下文感知的
+          翻译，确保各地的技术准确性。"
+      - "sectionName": "BenefitCardAlwaysCurrent"
+        "sectionSummary": "聚焦自动更新能力，解决关键痛点。"
+        "iconName": "mdi:update"
+        "cardTitle": "始终最新"
+        "cardDescription": "无需手动更新。DocSmith 会自动检测代码
+          变更并重新生成相关文档，始终保持
+          同步。"
+      - "sectionName": "BenefitCardZeroConfig"
+        "sectionSummary": "吸引追求快速、简便上手的用户。"
+        "iconName": "mdi:rocket-launch-outline"
+        "cardTitle": "零配置"
+        "cardDescription": "几秒即可上手。DocSmith 开箱即用，提供智能默认设置，
+          并自动检测你项目的技术栈。"
+      - "sectionName": "BenefitCardSeamlessIntegration"
+        "sectionSummary": "突出与 LLM 及发布平台的便捷集成。"
+        "iconName": "mdi:link-variant"
+        "cardTitle": "无缝集成"
+        "cardDescription": "连接你常用的 LLM，或使用 AIGNE Hub。一键发布，
+          立即与团队共享。"
+  - "sectionName": "FeatureShowcase"
+    "sectionSummary": "通过视觉吸引力强的分栏布局深入展示具体功能，
+      将描述性文本与 AIGNE 生态的清晰可视化
+      相结合。"
+    "splitHeroTitle": "AIGNE 生态的核心组成部分"
+    "splitHeroDescription": "DocSmith 不只是独立工具；它与 AIGNE 平台无缝
+      集成。因此，它能够利用强大的共享 AI 能力和
+      基础设施，让你无需自备 API 密钥即可使用
+      Gemini、GPT、Claude 等多种 LLM。"
+    "splitHeroActions":
+      - "text": "查看工作原理"
+        "link": "link:///documentation/how-it-works"
+      - "text": ""
+        "link": ""
+    "splitHeroRightImage": "https://docsmith.aigne.io/image-bin/uploads/def424c20bb\
+      db3c77483894fe0e22819.png"
+  - "sectionName": "HowItWorksTeaser"
+    "sectionSummary": "用于激发对 DocSmith 底层技术的兴趣，并引导用户前往
+      “工作原理”页面进行更深入的了解的
+      预告部分。"
+    "featureSectionTitle": "想知道这一切如何实现？"
+    "featureSectionDescription": "深入了解 AIGNE DocSmith 的架构。
+      探索智能分析你代码的多代理系统，并查看
+      完整的生成流水线如何运作。这就是其
+      背后的技术基础。"
+    "featureSectionAction":
+      "text": "深入了解工作原理"
+      "link": "link:///how-it-works"
+    "featureSectionBottomImage": "https://placehold.co/1440x520?text=DocSmith+Architecture"
+  - "sectionName": "FrequentlyAskedQuestions"
+    "sectionSummary": "本常见问题部分主动解答用户常见疑问，有助于消除
+      潜在顾虑，降低新用户开始使用时的
+      阻力。"
+    "faqTitle": "有问题？我们有答案。"
+    "faqList":
+      - "question": "AIGNE DocSmith 简而言之是什么？"
+        "answer": "这是一款智能的、由 AI 驱动的工具，通过分析你的代码库
+          自动生成高质量、结构化的多语言文档。把它看作
+          一位资深技术写作者，但速度要快得
+          多。"
+      - "question": "开始使用需要自备 API 密钥吗？"
+        "answer": "不需要。DocSmith 默认使用 AIGNE Hub，因此你无需任何
+          API 密钥即可立刻开始生成文档。若你愿意，也可以
+          连接你自己的 OpenAI、Google、Anthropic 等提供商的密钥。"
+      - "question": "它如何保持文档始终最新？"
+        "answer": "DocSmith 会智能检测你代码中的更改。当你运行
+          更新命令时，它会识别新增或修改的内容，并
+          仅自动重新生成受影响的部分，确保文档始终同步。"
+      - "question": "它支持哪些类型的项目？"
+        "answer": "它被设计为通用型。DocSmith 会自动检测你项目的
+          结构和技术栈，适用于 API、库、Web 应用等，且
+          可为不同受众自定义风格。"
+      - "question": "发布文档有多容易？"
+        "answer": "非常简单。只需一条 'aigne doc publish' 命令就能让
+          文档上线。你可以发布到公共的 DocSmith 平台，或
+          发布到你团队的私有实例。"
+  - "sectionName": "FinalCallToAction"
+    "sectionSummary": "页尾的高影响力最终号召性部分，通过提供清晰、
+      明确的下一步操作，将有兴趣的访客转化为
+      活跃用户。"
+    "ctaTitle": "准备好革新你的文档了吗？"
+    "ctaDescription": "别再把时间浪费在手工编写文档上。让 AI 处理繁重
+      工作，你可以专注于构建产品。立即试用 AIGNE DocSmith，
+      亲自体验其效果。"
+    "cta":
+      - "text": "免费开始使用"
+        "link": "link:///getting-started"
+      - "text": "在 GitHub 上查看"
+        "link": "https://github.com/AIGNE-io/aigne-doc-smith"
