--- a/.aigne/web-smith/pages/workspace/zh/how-it-works.yaml
+++ b/.aigne/web-smith/pages/workspace/zh/how-it-works.yaml
@@ -1,92 +1,219 @@
-meta:
-  title: "AIGNE DocSmith 工作原理 | 多智能体架构"
-  description: "深入了解 AIGNE DocSmith 架构。为技术用户介绍我们的多智能体系统和文档生成流程。"
-sections:
-  - sectionName: "howItWorksHero"
-    sectionSummary: "通过高层级的解释和一张可视化图表介绍多智能体架构的核心概念，立即确立页面的技术焦点。"
-    splitHeroTitle: "探索多智能体系统的强大功能"
-    splitHeroDescription: "AIGNE DocSmith 不是单一的工具，而是一个由专业 AI 智能体组成的动态团队协同工作。这个模块化的流程将您的源代码一步步转化为出色的文档，每次完成一项专家任务。"
-    splitHeroRightImage: "https://docsmith.aigne.io/image-bin/uploads/def424c20bbdb3c77483894fe0e22819.png"
-    splitHeroActions:
-      - text: "立即开始"
-        link: "link:///getting-started"
-      - text: "返回首页"
-        link: "link:///home"
-  - sectionName: "pipelineOverview"
-    sectionSummary: "使用 D2 图表直观地展示文档生成流程，为技术用户提供从代码输入到最终输出的清晰、高层级的全过程概览。"
-    verticalHeroTitle: "文档生成流程"
-    verticalHeroDescription: "DocSmith 的核心是从您的源代码到精美文档的无缝流程。了解我们的智能体如何管理从初步规划到最终发布的每个阶段。"
-    verticalHeroCode:
-      name: "Pipeline.d2"
-      content: "direction: down\n\nInput: {\n  label: \"源代码与配置\"\n  shape: rectangle\n}\n\nPipeline: {\n  label: \"核心生成流程\"\n  shape: rectangle\n  grid-columns: 1\n  grid-gap: 40\n\n  Structure-Planning: {\n    label: \"1. 结构规划\"\n    shape: rectangle\n  }\n\n  Content-Generation: {\n    label: \"2. 内容生成\"\n    shape: rectangle\n  }\n\n  Saving: {\n    label: \"3. 保存文档\"\n    shape: rectangle\n  }\n}\n\nUser-Feedback: {\n  label: \"用户反馈循环\\n(通过 --feedback 标志)\"\n  shape: rectangle\n}\n\nOptional-Steps: {\n  label: \"可选的生成后步骤\"\n  shape: rectangle\n  grid-columns: 2\n  grid-gap: 40\n  \n  Translation: {\n    label: \"翻译\\n(aigne doc translate)\"\n    shape: rectangle\n  }\n\n  Publishing: {\n    label: \"发布\\n(aigne doc publish)\"\n    shape: rectangle\n  }\n}\n\nInput -> Pipeline.Structure-Planning\nPipeline.Structure-Planning -> Pipeline.Content-Generation\nPipeline.Content-Generation -> Pipeline.Saving\nPipeline.Saving -> Optional-Steps\n\nUser-Feedback -> Pipeline.Structure-Planning: \"优化结构\"\nUser-Feedback -> Pipeline.Content-Generation: \"重新生成内容\""
-  - sectionName: "pipelineStages"
-    sectionSummary: "使用 Bento 网格将生成流程分解为五个清晰易懂的阶段。每个卡片详细介绍一个具体步骤，使复杂的流程一目了然。"
-    list:
-      - sectionName: "inputAnalysisCard"
-        sectionSummary: "解释流程的初始输入分析步骤。"
-        iconName: "carbon:code-reference"
-        cardTitle: "1. 输入分析"
-        cardDescription: "智能体首先加载您的源代码和 aigne.yaml 项目配置文件，启动整个流程。"
-      - sectionName: "structurePlanningCard"
-        sectionSummary: "解释流程的结构规划步骤。"
-        iconName: "carbon:network-4"
-        cardTitle: "2. 结构规划"
-        cardDescription: "一个专业的智能体分析您的代码库，提出一个逻辑清晰、内容全面的文档大纲。"
-      - sectionName: "contentGenerationCard"
-        sectionSummary: "解释流程的内容生成步骤。"
-        iconName: "carbon:edit"
-        cardTitle: "3. 内容生成"
-        cardDescription: "内容智能体开始工作，为每个部分填充详细的文本、代码示例和清晰的解释。"
-      - sectionName: "refinementUpdatesCard"
-        sectionSummary: "解释流程的优化和更新步骤。"
-        iconName: "carbon:loop"
-        cardTitle: "4. 优化与更新"
-        cardDescription: "根据您的反馈，智能体可以精确更新单个文档或按需调整整体结构。"
-      - sectionName: "translationPublishingCard"
-        sectionSummary: "解释流程中可选的翻译和发布步骤。"
-        iconName: "carbon:cloud-upload"
-        cardTitle: "5. 翻译与发布"
-        cardDescription: "可选的智能体负责多语言翻译，并将您的最终文档直接发布到网络平台。"
-  - sectionName: "keyAgents"
-    sectionSummary: "介绍负责核心功能的关键 AI 智能体。本节使用网格布局来突出每个智能体的特定角色，强化了系统的模块化、任务导向的特性。"
-    threeColumnGridTitle: "了解关键的 AI 智能体"
-    list:
-      - sectionName: "structurePlanningAgentCard"
-        sectionSummary: "详细说明结构规划智能体的角色。"
-        iconName: "carbon:plan"
-        cardTitle: "结构规划智能体"
-        cardDescription: "分析您的源代码，提出初始的文档大纲和结构图。"
-      - sectionName: "structureRefinementAgentCard"
-        sectionSummary: "详细说明结构优化智能体的角色。"
-        iconName: "carbon:task-tools"
-        cardTitle: "结构优化智能体"
-        cardDescription: "根据您的直接反馈，智能地修改文档结构。"
-      - sectionName: "contentGenerationAgentCard"
-        sectionSummary: "详细说明内容生成智能体的角色。"
-        iconName: "carbon:document-add"
-        cardTitle: "内容生成智能体"
-        cardDescription: "为规划好的结构填充丰富、详细的内容，覆盖每个部分。"
-      - sectionName: "translationAgentCard"
-        sectionSummary: "详细说明翻译智能体的角色。"
-        iconName: "carbon:translate"
-        cardTitle: "翻译智能体"
-        cardDescription: "将生成的文档翻译成多种目标语言，以覆盖全球用户。"
-      - sectionName: "publishingAgentCard"
-        sectionSummary: "详细说明发布智能体的角色。"
-        iconName: "carbon:send-alt"
-        cardTitle: "发布智能体"
-        cardDescription: "管理将您的文档发布到 Discuss Kit 实例的整个过程。"
-      - sectionName: "dataIOAgentCard"
-        sectionSummary: "详细说明数据 I/O 智能体的角色。"
-        iconName: "carbon:folder-details-reference"
-        cardTitle: "数据 I/O 智能体"
-        cardDescription: "处理读取源文件和将最终的 Markdown 文档写入磁盘等基本任务。"
-  - sectionName: "finalCta"
-    sectionSummary: "提供一个清晰且有吸引力的行动号召，鼓励技术用户从了解架构转向积极使用该工具。"
-    ctaTitle: "准备好亲自体验了吗？"
-    ctaDescription: "您已经了解了它的工作原理——现在亲身体验 AI 驱动的文档生成能力吧。只需几分钟即可开始。"
-    cta:
-      - text: "开始您的第一个项目"
-        link: "link:///getting-started"
-      - text: "探索企业版功能"
-        link: "link:///enterprise"
+"meta":
+  "title": "AIGNE DocSmith 的工作方式 | 多智能体架构"
+  "description": "深入了解 AIGNE DocSmith 的架构。了解我们的多智能体系统以及面向技术用户的文档生成流水线。"
+"sections":
+  - "sectionName": "howItWorksHero"
+    "sectionSummary": "以高层次说明和可视化图示介绍多智能体架构的核心概念，立即确立页面的技术重点。"
+    "splitHeroTitle": "探索多智能体系统的强大能力"
+    "splitHeroDescription": "AIGNE DocSmith 不是单一工具，而是一支协作的专业 AI 代理团队。这个模块化流水线按专家任务逐步将你的源代码转化为优质文档。"
+    "splitHeroRightImage": "https://docsmith.aigne.io/image-bin/uploads/def424c20bb\
+      db3c77483894fe0e22819.png"
+    "splitHeroActions":
+      - "text": "立即开始"
+        "link": "link:///getting-started"
+      - "text": "返回首页"
+        "link": "link:///home"
+  - "sectionName": "generationPipelineOverview"
+    "sectionSummary": "通过 D2 图展示核心文档生成流水线，显示从源代码到最终文档的流程。"
+    "verticalHeroTitle": "文档生成流水线"
+    "verticalHeroDescription": "DocSmith 的核心是一条强大的流水线，将你的源代码分阶段处理，每个阶段由专门的代理负责。展示从输入到发布的完整工作流。"
+    "verticalHeroCode":
+      "name": "d2"
+      "content": "direction: down
+
+
+        Input: {
+
+        \  label: \"Source Code & Config\"
+
+        \  shape: rectangle
+
+        }
+
+
+        Pipeline: {
+
+        \  label: \"Core Generation Pipeline\"
+
+        \  shape: rectangle
+
+        \  grid-columns: 1
+
+        \  grid-gap: 40
+
+
+        \  Structure-Planning: {
+
+        \    label: \"1. Structure Planning\"
+
+        \    shape: rectangle
+
+        \  }
+
+
+        \  Content-Generation: {
+
+        \    label: \"2. Content Generation\"
+
+        \    shape: rectangle
+
+        \  }
+
+
+        \  Saving: {
+
+        \    label: \"3. Save Documents\"
+
+        \    shape: rectangle
+
+        \  }
+
+        }
+
+
+        User-Feedback: {
+
+        \  label: \"User Feedback Loop\\n(via --feedback flag)\"
+
+        \  shape: rectangle
+
+        }
+
+
+        Optional-Steps: {
+
+        \  label: \"Optional Post-Generation Steps\"
+
+        \  shape: rectangle
+
+        \  grid-columns: 2
+
+        \  grid-gap: 40
+
+        \ \ 
+
+        \  Translation: {
+
+        \    label: \"Translate\\n(aigne doc translate)\"
+
+        \    shape: rectangle
+
+        \  }
+
+
+        \  Publishing: {
+
+        \    label: \"Publish\\n(aigne doc publish)\"
+
+        \    shape: rectangle
+
+        \  }
+
+        }
+
+
+        Input -> Pipeline.Structure-Planning
+
+        Pipeline.Structure-Planning -> Pipeline.Content-Generation
+
+        Pipeline.Content-Generation -> Pipeline.Saving
+
+        Pipeline.Saving -> Optional-Steps
+
+
+        User-Feedback -> Pipeline.Structure-Planning: \"Refine Structure\"
+
+        User-Feedback -> Pipeline.Content-Generation: \"Regenerate Content\"\n"
+  - "sectionName": "keyAgents"
+    "sectionSummary": "介绍负责核心功能的关键 AI 代理。本节以网格布局突出每个代理的具体角色，强化系统的模块化、任务导向特性。"
+    "threeColumnGridTitle": "认识核心 AI 代理"
+    "list":
+      - "sectionName": "structurePlanningAgentCard"
+        "sectionSummary": "说明结构规划代理的角色。"
+        "iconName": "carbon:plan"
+        "cardTitle": "结构规划代理"
+        "cardDescription": "分析你的源代码，提出初始的文档大纲与映射。"
+      - "sectionName": "structureRefinementAgentCard"
+        "sectionSummary": "说明结构优化代理的角色。"
+        "iconName": "carbon:task-tools"
+        "cardTitle": "结构优化代理"
+        "cardDescription": "根据你的直接反馈智能调整文档结构。"
+      - "sectionName": "contentGenerationAgentCard"
+        "sectionSummary": "说明内容生成代理的角色。"
+        "iconName": "carbon:document-add"
+        "cardTitle": "内容生成代理"
+        "cardDescription": "为计划结构中的每个部分填充丰富、详尽的内容。"
+      - "sectionName": "translationAgentCard"
+        "sectionSummary": "说明翻译代理的角色。"
+        "iconName": "carbon:translate"
+        "cardTitle": "翻译代理"
+        "cardDescription": "将生成的文档翻译为多种目标语言，以覆盖全球受众。"
+      - "sectionName": "publishingAgentCard"
+        "sectionSummary": "说明发布代理的角色。"
+        "iconName": "carbon:send-alt"
+        "cardTitle": "发布代理"
+        "cardDescription": "管理将文档发布到 Discuss Kit 实例的整个流程。"
+      - "sectionName": "dataIOAgentCard"
+        "sectionSummary": "说明数据 I/O 代理的角色。"
+        "iconName": "carbon:folder-details-reference"
+        "cardTitle": "数据 I/O 代理"
+        "cardDescription": "负责读取源文件并将最终的 Markdown 文档写入磁盘等基础任务。"
+  - "sectionName": "inputAnalysisStage"
+    "sectionSummary": "详细说明流水线的初始输入分析步骤。"
+    "splitHeroTitle": "阶段 1：输入分析"
+    "splitHeroDescription": "流程从这里开始。我们的智能代理会加载你的源代码和 `aigne.yaml` 项目配置。这是至关重要的第一步：全面了解你的项目，为高质量文档打下基础。"
+    "splitHeroLeftImage": "https://placehold.co/800x450?text=Input+Analysis"
+    "splitHeroActions":
+      - "text": ""
+        "link": ""
+      - "text": ""
+        "link": ""
+  - "sectionName": "structurePlanningStage"
+    "sectionSummary": "详细说明流水线中的结构规划步骤。"
+    "splitHeroTitle": "阶段 2：结构规划"
+    "splitHeroDescription": "接下来，结构规划代理充当文档的架构师。它细致分析你的代码库，提出逻辑清晰、全面且组织良好的文档大纲，就像由资深技术写作者完成整体规划。"
+    "splitHeroRightImage": "https://placehold.co/800x450?text=Structure+Planning"
+    "splitHeroActions":
+      - "text": ""
+        "link": ""
+      - "text": ""
+        "link": ""
+  - "sectionName": "contentGenerationStage"
+    "sectionSummary": "详细说明流水线中的内容生成步骤。"
+    "splitHeroTitle": "阶段 3：内容生成"
+    "splitHeroDescription": "在蓝图确定后，内容生成代理开始工作。它们逐一处理计划中的各个部分，填充详尽的文本、相关的代码示例和清晰的说明，使文档逐步成型。"
+    "splitHeroLeftImage": "https://placehold.co/800x450?text=Content+Generation"
+    "splitHeroActions":
+      - "text": ""
+        "link": ""
+      - "text": ""
+        "link": ""
+  - "sectionName": "refinementUpdatesStage"
+    "sectionSummary": "详细说明流水线中的优化与更新步骤。"
+    "splitHeroTitle": "阶段 4：优化与更新"
+    "splitHeroDescription": "当你执行更新时，专用代理会进行精确修改。无论是微调一句话，还是重组整体结构，系统都会智能响应你的输入，确保文档保持高质量。"
+    "splitHeroRightImage": "https://placehold.co/800x450?text=Refinement+&+Updates"
+    "splitHeroActions":
+      - "text": ""
+        "link": ""
+      - "text": ""
+        "link": ""
+  - "sectionName": "translationPublishingStage"
+    "sectionSummary": "详细说明流水线中可选的翻译与发布步骤。"
+    "splitHeroTitle": "阶段 5：翻译与发布"
+    "splitHeroDescription": "可选代理使这些工作更加简便。通过简单命令，你可以将文档翻译为多种语言，然后将完善的最终版本直接发布到你的 Web 平台。此步骤将你的知识顺畅地分享给全球受众。"
+    "splitHeroLeftImage": "https://placehold.co/800x450?text=Translation+&+Publishing"
+    "splitHeroActions":
+      - "text": ""
+        "link": ""
+      - "text": ""
+        "link": ""
+  - "sectionName": "bottomCta"
+    "sectionSummary": "最终的高能号召性用语，邀请用户体验 AI 驱动的文档能力并开始使用 AIGNE DocSmith。"
+    "ctaTitle": "准备好革新你的文档吗？"
+    "ctaDescription": "不仅仅是阅读——亲自体验实际效果。让我们的 AI 代理团队为你构建文档。几分钟即可开始，体验文档的未来。"
+    "cta":
+      - "text": "立即试用"
+        "link": "link:///getting-started"
+      - "text": "返回首页"
+        "link": "link:///home"
